config/microk8/infra-services/database/simple/allow-network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-postgres-exporter
  namespace: usp-dev
spec:
  podSelector:
    matchLabels:
      app: postgres-exporter
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: observability
      ports:
        - protocol: TCP
          port: 9187
